# code-solutions

./: LICENSE.md
challenges/codility-cpp/1/: iterations.cpp
challenges/codility-cpp/3/: frog-jump.cpp  perm-missing-elem.cpp
challenges/codility/cs/: 1_binary_gap.cs
challenges/codility/php/: 1_binary_gap.php
challenges/foobar-py/: 3_2_access_codes.py  3_3_fuel_injection.py  ?_largest_div_by_3.py  ?_min_moves.py  ?_shortest_path.py  ?_substring_from_primes.py  README.md
tutorials/dagster/: Pipfile  hello_cereal.py
tutorials/dagster/assets/: Pipfile  cereal.py
tutorials/django/: pyproject.toml
tutorials/django/mysite/: db.sqlite3
tutorials/django/mysite/mysite/: settings.py
tutorials/django/mysite/polls/: admin.py  models.py  tests.py  views.py
tutorials/django/mysite/polls/migrations/: 0001_initial.py
tutorials/django/mysite/polls/static/polls/: style.css
tutorials/django/mysite/polls/templates/polls/: detail.html  index.html  results.html
university/data-mining-labs/1-intro-to-weka/: credit-g-new-class.arff  credit-g-new-entries.arff  notes.org
university/data-mining-labs/2-data-pre-processing/: notes.org
university/data-mining-labs/3-evaluating-models/: notes.org
university/data-mining-labs/4-classifiers/: notes.org
university/data-mining-labs/5-paramters/: notes.org
university/data-mining-labs/6-cost/: heart-c.arff  notes.org
university/language-concepts-labs/: .gitignore
university/testing-cw/: setup.py
university/testing-cw/commently/: __main__.py  models.py  repo.py  utils.py
university/testing-labs/: todo.org
(+90 files in other folders)
